sqlanywhere-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__migration_contains_txn_statements.snap
---
source: sqlanywhere-server/tests/namespaces/shared_schema.rs
expression: "schema_conn.execute_batch(\"begin; create table test (c)\").await.unwrap_err()"
---
Hrana(
    StreamError(
        Error {
            message: "Schema migration error: migration is invalid: it contains transaction items (BEGIN, COMMIT, SAVEPOINT...) which are not allowed. The migration is already run within a transaction",
            code: "SCHEMA_MIGRATION_ERROR",
        },
    ),
)
