sqlanywhere-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__perform_data_migration-2.snap
---
source: sqlanywhere-server/tests/namespaces/shared_schema.rs
expression: "check_data(\"ns2\").await"
---
[
    "Row { cols: [Col { name: Some(\"c\"), decltype: None }], inner: [Integer { value: 42 }] }",
    "Row { cols: [Col { name: Some(\"c\"), decltype: None }], inner: [Integer { value: 43 }] }",
]
